# web-boilerplate

./: .gitignore  README.md  pyproject.toml
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
web_boilerplate/: __init__.py  db.py  main.py  settings.py
